--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Universal Settings
-server.port=2019
+#server.port=2019
 
 ## Hibernate Create Table Settings
 spring.jpa.hibernate.ddl-auto=create
@@ -21,17 +21,17 @@ management.endpoints.web.exposure.include=*
 
 
 ## Derrick Local Server Settings
-spring.datasource.url=jdbc:mysql://localhost:3306/coffeebean?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=${MYSQLPASSWORD}
+#spring.datasource.url=jdbc:mysql://localhost:3306/coffeebean?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=${MYSQLPASSWORD}
 
 ## Daylight Savings Time shift error: added timezone
 ##spring.datasource.url=jdbc:mysql://localhost:3306/coffeebean
 
 
 ## Heroku Settings
-#server.port=${PORT:5000}
-#spring.datasource.url=jbdc:System.getenv().get("JAWSDB_MARIA_URL")
+server.port=${PORT:5000}
+spring.datasource.url=jbdc:System.getenv().get("JAWSDB_MARIA_URL")
 
 # # **** Skidragon's settings ****
 # server.port=2019
